// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <span
        class="dse-text dse-font-size-md"
      >
        Please select an option...
      </span>
      <svg
        aria-hidden="true"
        class="dse-select__caret dse-select__caret--closed"
        data-slot="icon"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19.5 8.25-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <span
        class="dse-text dse-font-size-md"
      >
        Please select an option...
      </span>
      <svg
        aria-hidden="true"
        class="dse-select__caret dse-select__caret--open"
        data-slot="icon"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19.5 8.25-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="dse-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <div
          style="display: flex;"
        >
          <div
            class="dse-width-lg dse-height-lg"
            style="background-color: transparent;"
          />
          <div
            style="padding: 10px;"
          >
            <span
              class="dse-text dse-font-size-md"
            >
              Strict Black
            </span>
          </div>
        </div>
      </li>
      <li
        aria-label="Heavenly Green"
        class="dse-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <div
          style="display: flex;"
        >
          <div
            class="dse-width-lg dse-height-lg"
            style="background-color: transparent;"
          />
          <div
            style="padding: 10px;"
          >
            <span
              class="dse-text dse-font-size-md"
            >
              Heavenly Green
            </span>
          </div>
        </div>
      </li>
      <li
        aria-label="Sweet Pink"
        class="dse-select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <div
          style="display: flex;"
        >
          <div
            class="dse-width-lg dse-height-lg"
            style="background-color: transparent;"
          />
          <div
            style="padding: 10px;"
          >
            <span
              class="dse-text dse-font-size-md"
            >
              Sweet Pink
            </span>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <span
        class="dse-text dse-font-size-md"
      >
        Strict Black
      </span>
      <svg
        aria-hidden="true"
        class="dse-select__caret dse-select__caret--closed"
        data-slot="icon"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19.5 8.25-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
